[gd_scene load_steps=5 format=3 uid="uid://ct4t683r6jn78"]

[ext_resource type="Script" uid="uid://uljqfllywrdw" path="res://ui/battle_related/battle_outcome.gd" id="1_revyg"]
[ext_resource type="Texture2D" uid="uid://crb25rhwwvkcr" path="res://assets/ui/window_tab.png" id="2_bh2jv"]
[ext_resource type="Theme" uid="uid://dgmt8ko4oq3ew" path="res://ui/themes/general_ui_theme.tres" id="3_qftn7"]

[sub_resource type="Gradient" id="Gradient_hev1d"]
offsets = PackedFloat32Array(0, 0.183081, 0.344697, 0.532828, 0.723485, 0.864899)
colors = PackedColorArray(1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1)

[node name="BattleOutcome" type="Control"]
process_mode = 3
z_index = -1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_revyg")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.342207, 0.342207, 0.342207, 0.475)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(576, -64)
amount = 30
lifetime = 2.0
preprocess = 1.0
speed_scale = 0.5
emission_shape = 3
emission_rect_extents = Vector2(1152, 20)
linear_accel_min = -100.0
linear_accel_max = -100.0
scale_amount_min = 20.0
scale_amount_max = 20.0
color_ramp = SubResource("Gradient_hev1d")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -399.5
offset_top = -279.0
offset_right = 399.5
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bh2jv")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -216.0
offset_right = 238.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_qftn7")
theme_override_font_sizes/font_size = 85
text = "Result Here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(350, 75)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -322.0
offset_top = -111.0
offset_right = 322.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 4

[node name="ExpBarContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 35
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = -20.0
offset_right = 283.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="XpLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_qftn7")
theme_override_font_sizes/font_size = 30
text = "You've gained X HP!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemDropLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_qftn7")
theme_override_font_sizes/font_size = 30
text = "You got the item X!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TokenLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("3_qftn7")
theme_override_font_sizes/font_size = 30
text = "Yout got a Recruit Token!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 215.0
offset_top = 137.0
offset_right = -238.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="PlayAgain" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("3_qftn7")
theme_override_font_sizes/font_size = 45
text = "Play Again"

[node name="PreviousScene" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("3_qftn7")
theme_override_font_sizes/font_size = 45
text = "Return"

[connection signal="pressed" from="HBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="HBoxContainer/PreviousScene" to="." method="_on_previous_scene_pressed"]
